# advent-of-code

./: .gitignore  pyproject.toml
2022/days/: 08_trees.ipynb  12_distances.ipynb
2023/: pyproject.toml
2023/08/: inputs.py  main.py  test_main.py
2023/aoc/day_08/: inputs.py  main.py  test_main.py
2024/: pyproject.toml
2024/aoc/: day_01_list_distance.ipynb  day_02_monotonous_lists.ipynb  day_03_mul_parsing.ipynb  day_04_word_search.ipynb  day_05_print_queue.ipynb  day_06_guard_movements.ipynb  day_07_equation_finding.ipynb  day_08_antennas.ipynb  day_09_disk_fragmenter.ipynb  day_10_hiking_trails.ipynb
days/: 08_trees.ipynb  11_monkeys.ipynb  12_distances.ipynb  13_packets.ipynb
