[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Markus Kaiser <mk2092@cam.ac.uk>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "~3.10.0"
numpy = "^1.23.5"
jupyterlab = "^3.5.1"
ipython = "^8.7.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
