[tool.poetry]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = ["Markus Kaiser <mk2092@cam.ac.uk>"]
readme = "README.md"
packages = [{include = "advent_of_code"}]

[tool.poetry.dependencies]
python = "~3.11.0"
numpy = "^1.23.5"
jupyterlab = "^3.5.1"
ipython = "^8.7.0"
pandas = "^1.5.2"
regex = "^2022.10.31"
rich = "^12.6.0"
ipywidgets = "^8.0.3"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.12.0", extras = ["jupyter"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
