[tool.poetry]
name = "aoc"
version = "0.1.0"
description = ""
authors = ["Markus Kaiser <git@zfix.org>"]

[tool.poetry.dependencies]
python = "~3.11"
torch = "^2.1.2"
pytest = "^7.4.3"
ruff = "^0.1.8"
plotly = "^5.18.0"
numpy = "^1.26.2"
pandas = "^2.1.4"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.0.9"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
